--- a/niktravel/templates/home/index.html
+++ b/niktravel/templates/home/index.html
@@ -109,6 +109,21 @@
             </ul>
           </div>
 
+          <div class="tour">
+            <img src="{% static 'img/machu-picchu.jpg' %}" alt="" class="tour__img">
+            
+            <span class="tour__city">CUSCO</span>
+            <span class="tour__day">8 dias</span>
+            <h3 class="tour__title">valle sagrado de los incas</h3>
+            <span class="tour__cost">$ 800</span>
+            <ul class="tour-detail">
+              <li class="tour-detail__item">4-5 dias</li>
+              <li class="tour-detail__item">Visistar centro arqueoligicos</li>
+              <li class="tour-detail__item">vsitar muchupicchu</li>
+              <li class="tour-detail__item">100% satisfacion Garantisada.</li>
+            </ul>
+          </div>
+
         </div>
       </section>
 
@@ -147,72 +162,77 @@
         
         <div class="tours">
 
-          <div class="tour">
-            <img src="{% static 'img/machu-picchu.jpg' %}" alt="" class="tour__img">
+          <div class="tour--new">
+            <img src="{% static 'img/vinicunca.jpg' %}" alt="" class="tour--new__img">
             
-            <div class="tour__info">
-              <span class="tour__city">CUSCO</span>
-              <span class="tour__day">8 dias</span>
-              <h3 class="tour__title">valle sagrado de los incas</h3>
-              <span class="tour__cost">$ 800</span>
-            </div>  
+            <a href="">
+              <div class="tour--new__info">
+                <span class="tour--new__city">CUSCO</span>
+                <span class="tour--new__day">8 dias</span>
+                <h3 class="tour--new__title">valle sagrado de los incas</h3>
+                <span class="tour--new__cost">$ 800</span>
+              </div>  
+            </a>
           </div>
 
-          <div class="tour">
-            <img src="{% static 'img/machu-picchu.jpg' %}" alt="" class="tour__img">
-            
-            <div class="tour__info">
-              <span class="tour__city">CUSCO</span>
-              <span class="tour__day">8 dias</span>
-              <h3 class="tour__title">valle sagrado de los incas</h3>
-              <span class="tour__cost">$ 800</span>
-            </div>  
-          </div>
-
-          <div class="tour">
-            <img src="{% static 'img/machu-picchu.jpg' %}" alt="" class="tour__img">
-            
-            <div class="tour__info">
-              <span class="tour__city">CUSCO</span>
-              <span class="tour__day">8 dias</span>
-              <h3 class="tour__title">valle sagrado de los incas</h3>
-              <span class="tour__cost">$ 800</span>
-            </div>  
-          </div>
+          <div class="tour--new">
+              <img src="{% static 'img/peru-cusco.jpg' %}" alt="" class="tour--new__img">
+              
+              <div class="tour--new__info">
+                <span class="tour--new__city">CUSCO</span>
+                <span class="tour--new__day">8 dias</span>
+                <h3 class="tour--new__title">valle sagrado de los incas</h3>
+                <span class="tour--new__cost">$ 800</span>
+              </div>  
+            </div>
           
-          <div class="tour">
-            <img src="{% static 'img/machu-picchu.jpg' %}" alt="" class="tour__img">
+            <div class="tour--new">
+                <img src="{% static 'img/machu-picchu.jpg' %}" alt="" class="tour--new__img">
+                
+                <div class="tour--new__info">
+                  <span class="tour--new__city">CUSCO</span>
+                  <span class="tour--new__day">8 dias</span>
+                  <h3 class="tour--new__title">valle sagrado de los incas</h3>
+                  <span class="tour--new__cost">$ 800</span>
+                </div>  
+              </div>
+          <div class="tour--new">
+            <img src="{% static 'img/machu-picchu.jpg' %}" alt="" class="tour--new__img">
             
-            <div class="tour__info">
-              <span class="tour__city">CUSCO</span>
-              <span class="tour__day">8 dias</span>
-              <h3 class="tour__title">valle sagrado de los incas</h3>
-              <span class="tour__cost">$ 800</span>
+            <div class="tour--new__info">
+              <span class="tour--new__city">CUSCO</span>
+              <span class="tour--new__day">8 dias</span>
+              <h3 class="tour--new__title">valle sagrado de los incas</h3>
+              <span class="tour--new__cost">$ 800</span>
             </div>  
           </div>
 
-          <div class="tour">
-            <img src="{% static 'img/machu-picchu.jpg' %}" alt="" class="tour__img">
+          <div class="tour--new">
+            <img src="{% static 'img/huacachina.jpg' %}" alt="" class="tour--new__img">
             
-            <div class="tour__info">
-              <span class="tour__city">CUSCO</span>
-              <span class="tour__day">8 dias</span>
-              <h3 class="tour__title">valle sagrado de los incas</h3>
-              <span class="tour__cost">$ 800</span>
+            <div class="tour--new__info">
+              <span class="tour--new__city">CUSCO</span>
+              <span class="tour--new__day">8 dias</span>
+              <h3 class="tour--new__title">valle sagrado de los incas</h3>
+              <span class="tour--new__cost">$ 800</span>
             </div>  
           </div>
 
-          <div class="tour">
-            <img src="{% static 'img/machu-picchu.jpg' %}" alt="" class="tour__img">
+          <div class="tour--new">
+            <img src="{% static 'img/nazca.jpg' %}" alt="" class="tour--new__img">
             
-            <div class="tour__info">
-              <span class="tour__city">CUSCO</span>
-              <span class="tour__day">8 dias</span>
-              <h3 class="tour__title">valle sagrado de los incas</h3>
-              <span class="tour__cost">$ 800</span>
-            </div>  
+            <a href="">
+              <div class="tour--new__info">
+                <span class="tour--new__city">CUSCO</span>
+                <span class="tour--new__day">8 dias</span>
+                <h3 class="tour--new__title">valle sagrado de los incas</h3>
+                <span class="tour--new__cost">$ 800</span>
+              </div>
+            </a> 
           </div>
+
         </div>
+
       </section>
     </main>
     {% include "include/footer.html" %}
