--- a/niktravel/static/css/styles.css
+++ b/niktravel/static/css/styles.css
@@ -40,7 +40,7 @@ a:hover {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  max-width: 960px;
+  max-width: 1000px;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
@@ -1257,9 +1257,75 @@ h1, h2, h3, h4 {
   padding: 3.75px;
 }
 
+.tour--new {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 1fr;
+  position: relative;
+}
+
+.tour--new__img {
+  width: 100%;
+  height: 250px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  grid-row: 1;
+  grid-column: 1/3;
+}
+
+.tour--new__info {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: #000;
+  opacity: .7;
+  color: #fff;
+  font-weight: 800;
+  padding: 0.9375em 0.46875em;
+  font-size: 0.817rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.tour--new__info:hover {
+  background-color: #b63327;
+  opacity: 0.8;
+}
+
+.tour--new__city, .tour--new__day, .tour--new__title, .tour--new__cost {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+  padding: 5px;
+}
+
+.tour--new__cost, .tour--new__day {
+  text-align: end;
+}
+
+.tour--new__city {
+  font-weight: 400;
+  font-style: italic;
+  text-transform: uppercase;
+}
+
+.tour--new__title {
+  -ms-flex-preferred-size: 80%;
+      flex-basis: 80%;
+  text-transform: uppercase;
+}
+
+.tour--new__cost {
+  -ms-flex-preferred-size: 20%;
+      flex-basis: 20%;
+}
+
 .cards {
   display: grid;
-  max-width: 960px;
+  max-width: 1000px;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
