--- a/niktravel/static/scss/collections/_tours.scss
+++ b/niktravel/static/scss/collections/_tours.scss
@@ -86,3 +86,63 @@
         padding: $line-height/4;
     }
 }
+
+.tour--new {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr;
+
+    position: relative;
+    &__img {
+        width: 100%;
+        height: 250px;
+        object-fit: cover;
+        grid-row: 1;
+        grid-column: 1/3;
+    }
+    &__info {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        background-color: #000;
+        opacity: .7;
+        color: #fff;
+        font-weight: 800;
+        padding: $gutter $gutter*0.5;
+        font-size: $s1;
+
+        display: flex;
+        flex-wrap: wrap;
+
+        &:hover {
+            background-color: $primary;
+            opacity: 0.8;
+        }
+
+    }
+    &__city, &__day, &__title, &__cost {
+        flex-basis: 50%;
+        padding: 5px;
+    }
+
+    &__cost, &__day {
+        text-align: end;
+    }
+    &__city {
+        font-weight: 400;
+        font-style: italic;
+        text-transform: uppercase;
+    }
+    &__day {
+
+    }
+    &__title {
+        flex-basis: 80%;
+        text-transform: uppercase;        
+
+    }
+    &__cost {
+        flex-basis: 20%;
+    }
+}
