--- a/niktravel/static/scss/_ed-grid.scss
+++ b/niktravel/static/scss/_ed-grid.scss
@@ -64,6 +64,10 @@
 @import "collections/nav.scss";
 @import "collections/tours.scss";
 @import "collections/cards.scss";
+@import "collections/packageInfo.scss";
+@import "collections/gallery.scss";
+@import "collections/program";
+@import "collections/list";
 
 // layuaut 
 @import "layaut/app.scss";
