--- a/niktravel/static/scss/collections/_tours.scss
+++ b/niktravel/static/scss/collections/_tours.scss
@@ -27,7 +27,7 @@
     }
     &__city {
         @extend %title3;
-        font-weight: 600;
+        font-weight: $regular;
         font-style: italic;        
         grid-row: 2;
         grid-column: 1;
@@ -61,7 +61,7 @@
     }
     &__cost {
         @extend %title2;
-        font-weight: 600;        
+        font-weight: $regular;        
         grid-row: 3;
         grid-column: 2;
         justify-self: end;
@@ -108,7 +108,7 @@
         background-color: #000;
         opacity: .7;
         color: #fff;
-        font-weight: 800;
+        font-weight: $regular;
         padding: $gutter $gutter*0.5;
         font-size: $s1;
 
