creacion de la bade de datos

--- a/niktravel/templates/tours/detail.html
+++ b/niktravel/templates/tours/detail.html
@@ -45,7 +45,7 @@
             </div>
 
             <div class="package__box">
-                <a href="#" class="package__btn">COMPAR</a>
+                <a href="#" class="package__btn">COMPRAR</a>
             </div>
 
           </div>
