--- a/niktravel/static/css/styles.css
+++ b/niktravel/static/css/styles.css
@@ -75,7 +75,7 @@ p {
 | $gutter: separación entre cada item de la cuadricula (opcional)
 |
 */
-.button, .package__btn, .gallery__btn {
+.button, .tour__btn, .package__btn, .gallery__btn {
   display: inline-block;
   padding: .8em 1.6em;
   cursor: pointer;
@@ -1165,13 +1165,13 @@ h1, h2, h3, h4 {
 
 .tour {
   display: grid;
-  grid-template-columns: 2fr 1fr;
-  grid-template-rows: 1fr 3em 2em auto;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr auto 3em 2em auto auto;
 }
 
 @media screen and (min-width: 640px) {
   .tour {
-    grid-template-rows: 1fr 2.5em 2em auto;
+    grid-template-rows: 200px 2.5em 2em auto auto;
   }
 }
 
@@ -1181,13 +1181,30 @@ h1, h2, h3, h4 {
   -o-object-fit: cover;
      object-fit: cover;
   grid-row: 1;
-  grid-column: 1/3;
+  grid-column: 1 / span 3;
+}
+
+.tour__title {
+  grid-row: 2;
+  grid-column: 1 / span 3;
+  -ms-flex-item-align: start;
+      align-self: start;
+  padding-top: 0.46875em;
+}
+
+@media screen and (min-width: 640px) {
+  .tour__title {
+    font-size: 1rem;
+    line-height: normal;
+    -ms-flex-item-align: center;
+        align-self: center;
+  }
 }
 
 .tour__city {
   font-weight: 700;
   font-style: italic;
-  grid-row: 2;
+  grid-row: 3;
   grid-column: 1;
   -ms-flex-item-align: center;
       align-self: center;
@@ -1201,8 +1218,8 @@ h1, h2, h3, h4 {
 }
 
 .tour__day {
-  grid-row: 2;
-  grid-column: 2;
+  grid-row: 3;
+  grid-column: 3 / 4;
   justify-self: end;
   -ms-flex-item-align: center;
       align-self: center;
@@ -1215,24 +1232,11 @@ h1, h2, h3, h4 {
   }
 }
 
-.tour__title {
-  grid-row: 3;
-  grid-column: 1;
-  -ms-flex-item-align: start;
-      align-self: start;
-}
-
-@media screen and (min-width: 640px) {
-  .tour__title {
-    font-size: 1rem;
-  }
-}
-
 .tour__cost {
   font-weight: 700;
-  grid-row: 3;
-  grid-column: 2;
-  justify-self: end;
+  grid-row: 4;
+  grid-column: 1 / span 3;
+  justify-self: center;
   -ms-flex-item-align: start;
       align-self: start;
 }
@@ -1243,9 +1247,37 @@ h1, h2, h3, h4 {
   }
 }
 
+.tour__footer {
+  grid-row: 6;
+  grid-column: 1 / span 3;
+  padding-top: 0.46875em;
+  -ms-flex-item-align: end;
+      align-self: end;
+  justify-self: center;
+}
+
+.tour__btn {
+  background: #b63327;
+  color: #fff;
+  border-radius: 1.25em;
+  font-size: 0.817rem;
+  font-weight: 700;
+}
+
+.tour__btn:hover {
+  background: #a12d23;
+  text-decoration: none;
+}
+
+.tour__btn:active {
+  -webkit-transform: scale(0.97);
+      -ms-transform: scale(0.97);
+          transform: scale(0.97);
+}
+
 .tour-detail {
-  grid-row: 4;
-  grid-column: 1/3;
+  grid-row: 5;
+  grid-column: 1 / span 3;
   margin: 0;
   list-style: none;
   padding: 0 0.46875em;
@@ -1317,14 +1349,14 @@ h1, h2, h3, h4 {
 }
 
 .tour--new__title {
-  -ms-flex-preferred-size: 80%;
-      flex-basis: 80%;
+  -ms-flex-preferred-size: 75%;
+      flex-basis: 75%;
   text-transform: uppercase;
 }
 
 .tour--new__cost {
-  -ms-flex-preferred-size: 20%;
-      flex-basis: 20%;
+  -ms-flex-preferred-size: 25%;
+      flex-basis: 25%;
 }
 
 .cards {
@@ -2038,4 +2070,5 @@ h1, h2, h3, h4 {
 
 .banner__title {
   text-transform: uppercase;
+  padding: 0.46875em 0;
 }
