--- a/niktravel/static/scss/collections/_tours.scss
+++ b/niktravel/static/scss/collections/_tours.scss
@@ -13,23 +13,35 @@
 
 .tour {
     display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: 1fr 3em 2em auto;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr auto 3em 2em auto auto;
     @include from(m) {
-    grid-template-rows: 1fr 2.5em 2em auto;                
+    grid-template-rows: 200px 2.5em 2em auto auto;                
     }
     &__img {
         width: 100%;
         height: 200px;
         object-fit: cover;
         grid-row: 1;
-        grid-column: 1/3;
+        grid-column: 1 / span 3;
+    }
+    &__title {
+        @extend %title2;
+        grid-row: 2;
+        grid-column: 1 / span 3;
+        align-self: start;
+        padding-top: $gutter*0.5;        
+        @include from(m) {
+            font-size: $base;
+            line-height: normal;
+            align-self: center;
+        }
     }
     &__city {
         @extend %title3;
         font-weight: $regular;
         font-style: italic;        
-        grid-row: 2;
+        grid-row: 3;
         grid-column: 1;
         align-self: center;
         color: $primary;
@@ -40,8 +52,8 @@
     }
     &__day {
         @extend %base;                
-        grid-row: 2;
-        grid-column: 2;
+        grid-row: 3;
+        grid-column: 3 / 4;
         justify-self: end;
         align-self: center;
         color: $primary;
@@ -50,31 +62,34 @@
         }        
         
     }
-    &__title {
-        @extend %title2;
-        grid-row: 3;
-        grid-column: 1;
-        align-self: start;        
-        @include from(m) {
-            font-size: $base;
-        }
-    }
     &__cost {
         @extend %title2;
         font-weight: $regular;        
-        grid-row: 3;
-        grid-column: 2;
-        justify-self: end;
+        grid-row: 4;
+        grid-column: 1 / span 3;
+        justify-self: center;
         align-self: start;                        
         @include from(m) {
             font-size: $base;
         }
     }
+    &__footer {
+        grid-row: 6;
+        grid-column: 1 / span 3;
+        padding-top: $gutter*0.5;
+        align-self: end;
+        justify-self: center;
+    }
+    &__btn {
+        @include edgridButton($primary, #fff, round);
+        font-size: $s1;
+        font-weight: $regular;
+    }
 }
 
 .tour-detail {
-    grid-row: 4;
-    grid-column: 1/3;
+    grid-row: 5;
+    grid-column: 1 / span 3;
     margin: 0;
     list-style: none;
     @extend %title3;
@@ -138,11 +153,11 @@
 
     }
     &__title {
-        flex-basis: 80%;
+        flex-basis: 75%;
         text-transform: uppercase;        
 
     }
     &__cost {
-        flex-basis: 20%;
+        flex-basis: 25%;
     }
 }
