--- a/niktravel/static/scss/layaut/_banner.scss
+++ b/niktravel/static/scss/layaut/_banner.scss
@@ -47,8 +47,9 @@
         }
     }
     &__title {
-    @extend %title1;
-        text-transform: uppercase;       
+        @extend %title1;
+        text-transform: uppercase;
+        padding: $gutter*0.5 0;
         
     }
     &__description {
