--- a/niktravel/templates/tours/detail.html
+++ b/niktravel/templates/tours/detail.html
@@ -19,10 +19,10 @@
     <main class="main">
         
       <div class="banner">
-        <img src="{% static 'img/nazca.jpg' %}" alt="" class="banner__img">
+        <img src="{{ tour.cover.url }}" alt="{{ tour.name }}" title="{{ tour.name }}" class="banner__img">
         <div class="banner__data">
-          <span class="banner__city">Perú, cusco</span>
-          <h1 class="banner__title">valle sagrado de los incas</h1>
+          <span class="banner__city">Perú, {{ tour.place }}</span>
+          <h1 class="banner__title">{{ tour.name }}</h1>
         </div>
       </div>
 
@@ -31,17 +31,23 @@
 
             <div class="package__box">
                 <span class="package__label">DURACIÓN</span>
-                <span class="package__content">9 DIAS</span>
+                <span class="package__content">{{ tour.duration }} DIAS</span>
             </div>
 
             <div class="package__box">
                 <span class="package__label">PRICE</span>
-                <span class="package__content">$. 300</span>
+                <span class="package__content">$.{{ tour.price_sol }}</span>
             </div>
 
             <div class="package__box">
                 <span class="package__label">DISPONIBILIDAD</span>
-                <span class="package__content">TODO EL AÑO</span>
+                
+                {% if tour.duration == "1" %}
+                  <span class="package__content">Consultar</span>                  
+                {% else %}
+                  <span class="package__content">TODO EL AÑO</span>
+                {% endif %}
+                  
             </div>
 
             <div class="package__box">
@@ -56,17 +62,16 @@
 
 
       <section class="section">
-        <h2 class="section__title">VALLE SAGRADO DE LOS INCAS</h2>
-        <span class="section__subtitle">Experiencia en 12 dias de viaje</span>
+        <h2 class="section__title">{{ tour.name }}</h2>
+        <span class="section__subtitle">Experiencia en {{ tour.duration }} dia(s) de viaje</span>
         
         <div class="section__content">
-          <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi sed repudiandae minima eum sunt? Consequatur, corrupti pariatur omnis ipsa numquam perspiciatis aliquid nulla labore possimus. Ratione modi corporis quidem quisquam?</P>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, corrupti porro earum aperiam hic totam dolore dignissimos, minima, officia voluptatum dicta architecto placeat magni nobis eligendi. Autem, quia. Perferendis, natus!</p>
+          <p>{{ tour.description_es }}</p> 
         </div>
 
         <div class="ed-item">
           <div class="ed-video">
-            <iframe src="https://player.vimeo.com/video/133974922" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            {{ tour.video|safe }}
           </div>
         </div>
 
@@ -78,30 +83,15 @@
         <span class="section__subtitle">Experiencia de clase mundial</span>
         
         <div class="program-container">
-          <div class="program">
-            <span class="program__day">DIA 1-2</span>
-            <H3 class="program__title">CVHESCKY, VIENA</H3>
-            <p class="program__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor explicabo animi atque dolore facere labore eum! Ratione quisquam expedita optio dicta soluta labore magni reprehenderit et, pariatur repellendus, quaerat modi?</p>
-          </div>
-
-          <div class="program">
-            <span class="program__day">DIA 2-3</span>
-            <H3 class="program__title">CESKY KRUMLOV, HALLSTAT</H3>
-            <p class="program__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse dolor in doloribus eligendi numquam maxime explicabo vero temporibus commodi? Quae tempore modi ex asperiores, mollitia fugiat vero error blanditiis impedit!</p>
-          </div>
-
-          <div class="program">
-            <span class="program__day">DIA 4-7</span>
-            <H3 class="program__title">MUNICH, VIENA</H3>
-            <p class="program__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor explicabo animi atque dolore facere labore eum! Ratione quisquam expedita optio dicta soluta labore magni reprehenderit et, pariatur repellendus, quaerat modi?</p>
-          </div>
-
-          <div class="program">
-            <span class="program__day">DIA 7-8</span>
-            <H3 class="program__title">HALLSTAT, SALZBURG, MUNICH</H3>
-            <p class="program__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere adipisci veritatis ipsa deleniti laboriosam officia doloribus nobis exercitationem provident, eos vitae cupiditate reiciendis magnam, totam impedit commodi, nam vel aut.</p>
-          </div>
-        </div>
+          
+          {% for item in itinerary %}
+            <div class="program">
+              <span class="program__day">DIA {{ item.day }}</span>
+              <H3 class="program__title">{{ item.title|upper }}</H3>
+              <p class="program__description">{{ item.description_es }}</p>
+            </div>
+            
+          {% endfor %}
 
       </section>
 
@@ -111,11 +101,11 @@
           <span class="section__subtitle">Experiencia de clase mundial</span>
           
           <ul class="list">
-            <li class="list__item">Tour guiado</li>
-            <li class="list__item">Precios de entrada</li>
-            <li class="list__item">Tralaldo de ida y vuelta</li>
-            <li class="list__item">Informacion en ingles</li>
-            <li class="list__item">Hospedaje en hotel</li>
+          
+          {% for include in tour.include.all %}
+            <li class="list__item">{{ include }}</li>            
+          {% endfor %}
+            
           </ul>
   
         </section>
@@ -125,50 +115,42 @@
           <span class="section__subtitle">Experiencia de clase mundial</span>
           
           <ul class="list">
-            <li class="list__item">Desayuno</li>
-            <li class="list__item">Paseo en barco</li>
-            <li class="list__item">Tralaldo de ida</li>
-            <li class="list__item">Informacion en japones/li>
+            
+            {% for noInclude in tour.no_include.all %}
+              <li class="list__item">{{ noInclude }}</li>
+              
+            {% endfor %}
+
           </ul>
   
         </section>
 
       </section>
 
-      
-
-
-
 
       <section class="section--gallery">
 
         <div class="gallery">
-          <div class="gallery__item">
-            <img src="{% static 'img/huacachina.jpg' %}" alt="" class="gallery__img">
-          </div>
-          <div class="gallery__item">
-            <img src="{% static 'img/machu-picchu.jpg' %}" alt="" class="gallery__img">
-          </div>
-          <div class="gallery__item">
-              <img src="{% static 'img/machu-picchu-2.jpg' %}" alt="" class="gallery__img">
-            </div>
-            <div class="gallery__item">
-              <img src="{% static 'img/nazca.jpg' %}" alt="" class="gallery__img">
-            </div>
-            <div class="gallery__item">
-              <img src="{% static 'img/peru-cusco.jpg' %}" alt="" class="gallery__img">
-            </div>
-            <div class="gallery__item">
-              <img src="{% static 'img/vinicunca.jpg' %}" alt="" class="gallery__img">
-            </div>
-            <div class="gallery__item">
-              <img src="{% static 'img/huacachina.jpg' %}" alt="" class="gallery__img--action">
-              <div class="gallery__info">
-                <p class="gallery__price">STARTING PRICE $3000</p>
-                <span class="gallery__call">Compra este tour</span>
-                <a href="#" class="gallery__btn">Comprar Ahora</a>
+        
+          {% for photo in gallery %}
+            
+            {% if forloop.last %}
+              <div class="gallery__item">
+                <img src="{{ photo.image.url }}" alt="" class="gallery__img--action">
+                <div class="gallery__info">
+                  <p class="gallery__price">STARTING PRICE ${{tour.price_sol }}</p>
+                  <span class="gallery__call">Compra este tour</span>
+                  <a href="#" class="gallery__btn">Comprar Ahora</a>
+                </div>
               </div>
-            </div>
+            {% else %}
+              <div class="gallery__item">
+                <img src="{{ photo.image.url }}" alt="" class="gallery__img">
+              </div>
+            {% endif %}
+              
+          {% endfor %}  
+          
         </div>
       </section>
 
