--- a/niktravel/templates/home/base_home.html
+++ b/niktravel/templates/home/base_home.html
@@ -2,6 +2,8 @@
 
 {% load  staticfiles %}
 
+{% load i18n %}
+
 {% block css %}
   <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 {% endblock css %}
