--- a/niktravel/templates/home/index.html
+++ b/niktravel/templates/home/index.html
@@ -2,7 +2,7 @@
 
 {% load  staticfiles %}
 
-{% load l18n %}
+{% load i18n %}
 
 {% block title %}
   Agencia de viaje
@@ -23,17 +23,16 @@
         <div class="banner__data">
           <h1 class="banner__title">cusco</h1>
           <p class="banner__description">
-            Mística ciudad sagrada, considerada la capital del Imperio Tahuantinsuyo con un gran legado histórico y arquitectónico. Rodeada de valles verdosos con imponentes atractivos turísticos, cultura, tradición y fe aún latente. Conocida como el ombligo del mundo por ser el centro político y territorial del Imperio Incaico, el departamento de Cusco nos muestra una impactante variedad geográfica desde naturales cordilleras y relieves, hasta ríos como el Urubamba.
+            {% trans 'Mística ciudad sagrada, considerada la capital del Imperio Tahuantinsuyo con un gran legado histórico y arquitectónico. Rodeada de valles verdosos con imponentes atractivos turísticos, cultura, tradición y fe aún latente. Conocida como el ombligo del mundo por ser el centro político y territorial del Imperio Incaico, el departamento de Cusco nos muestra una impactante variedad geográfica desde naturales cordilleras y relieves, hasta ríos como el Urubamba.' %} 
           </p>
         </div>
       </div>
 
       <section class="section">
-        <h2 class="section__title">MEJORES OFERTAS</h2>
-        <span class="section__subtitle">mira nuestras mejores promociones en tours</span>
+        <h2 class="section__title">{% trans 'MEJORES OFERTAS' %}</h2>
+        <span class="section__subtitle">{% trans 'mira nuestras mejores promociones en tours' %}</span>
 
         <div class="tours">
-          
           
           {% for oferta in ofertas %}
             <div class="tour">
@@ -41,17 +40,26 @@
               
               <h3 class="tour__title">{{ oferta.name|title }}</h3>
               <span class="tour__city">{{ oferta.place }}</span>
-              <span class="tour__day">{{ oferta.duration }} dias</span>
-              <span class="tour__cost">$.{{ oferta.price_sol }}</span>
+              <span class="tour__day">{{ oferta.duration }} {% trans 'dia(s)' %}</span>
+              <span class="tour__cost">
+                {% if  LANGUAGE_CODE == "es" %}
+                  S/ {{ oferta.price_sol }}
+                {% else %}
+                  $ {{ oferta.price_dolar }}
+                {% endif %}
+                  
+              </span>
               <ul class="tour-detail">
-                
+
                 {% for detail in oferta.include.all|slice:"4" %}
-                  <li class="tour-detail__item">{{ detail }} dias</li>
+                  <li class="tour-detail__item">{{ detail }} {% trans 'dia(s)' %} </li>
                 {% endfor %}
 
               </ul>
               <div class="tour__footer">
-                <a href="{% url 'tours_app:detail' oferta.category oferta.slug %}" class="tour__btn">MAS INFORCIÓN.</a>
+                <a href="{% url 'tours_app:detail' oferta.category oferta.slug %}" class="tour__btn">
+                  {% trans 'MAS INFORCIÓN' %}
+                </a>
               </div>
             </div>            
           {% endfor %}
@@ -123,37 +131,37 @@
       </section>
 
       <section class="section--paralax">
-        <h2 class="section--paralax__title">PORQUE ELEGIRNOS</h2>
+        <h2 class="section--paralax__title">{% trans 'PORQUE ELEGIRNOS' %}</h2>
 
         <div class="cards">
 
           <div class="card">
             <span class="card__icon icon-star"></span>
-            <h3 class="card__title">World Class Service</h3>  
-            <p class="card__description">Lorem ipsum dolor. Mollitia praesentium laborum omnis laudantium voluptatem inventore rerum aperiam saepe ipsum.</p>
-            <a href="" class="card__link">mas información.</a>
+            <h3 class="card__title">{% trans 'World Class Service' %}</h3>  
+            <p class="card__description">{% trans 'Lorem ipsum dolor. Mollitia praesentium laborum omnis laudantium voluptatem inventore rerum aperiam saepe ipsum' %}.</p>
+            <a href="" class="card__link">{% trans 'mas información' %}.</a>
           </div>
 
           <div class="card">
             <span class="card__icon icon-globe"></span>
-              <h3 class="card__title">World Class Service</h3>  
-              <p class="card__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia praesentium laborum omnis aperiam saepe ipsum.</p>
-              <a href="" class="card__link">mas información.</a>
+              <h3 class="card__title">{% trans 'World Class Service' %} </h3>  
+              <p class="card__description">{% trans 'Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia praesentium laborum omnis aperiam saepe ipsum' %}.</p>
+              <a href="" class="card__link">{% trans 'mas información' %}.</a>
           </div>
 
           <div class="card">
             <span class="card__icon icon-price-tag"></span>
-              <h3 class="card__title">World Class Service</h3>  
-              <p class="card__description">Lorem ipsum dolor sit amet, consect adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa </p>
-              <a href="" class="card__link">mas información.</a>
+              <h3 class="card__title">{% trans 'World Class Service' %} </h3>  
+              <p class="card__description">{% trans 'Lorem ipsum dolor sit amet, consect adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa' %}.</p>
+              <a href="" class="card__link">{% trans 'mas información' %}.</a>
           </div>
 
         </div>
       </section>
 
       <section class="section">
-        <h2 class="section__title">MEJORES OFERTAS</h2>
-        <span class="section__subtitle">mira nuestras tours mas recientes</span>
+        <h2 class="section__title">{% trans 'MEJORES OFERTAS' %}</h2>
+        <span class="section__subtitle">{% trans 'Mira nuestras tours mas recientes' %}</span>
         
         <div class="tours">
 
@@ -164,9 +172,16 @@
               <a href="{% url 'tours_app:detail' tour.category tour.slug %}">
                 <div class="tour--new__info">
                   <span class="tour--new__city">{{ tour.place }}</span>
-                  <span class="tour--new__day">{{ tour.duration }} dias</span>
+                  <span class="tour--new__day">{{ tour.duration }} {% trans 'dia(s)' %}</span>
                   <h3 class="tour--new__title">{{ tour.name|truncatechars:25 }}</h3>
-                  <span class="tour--new__cost">$.{{ tour.price_sol }}</span>
+                  <span class="tour--new__cost">
+                  {% if  LANGUAGE_CODE == "es" %}
+                    S/ {{ tour.price_sol }}
+                  {% else %}
+                    $ {{ tour.price_dolar }}
+                  {% endif %}
+                  
+                  </span>
                 </div>  
               </a>
             </div>
